# esp-p4-pose

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  RELEASE_OPTIMIZATIONS.md  UPGRADE_NOTES.md  build_log.txt  flash_c6.sh  flash_c6_updated.sh  partitions.csv  rebuild_and_flash_c6.sh  rebuild_and_flash_p4.sh  sdkconfig.bak2  sdkconfig.defaults  sdkconfig.defaults.esp_hosted_disable
c6_messenger/: CMakeLists.txt  Kconfig.projbuild  README.txt  copy_to_c6.sh  partitions.csv  sdkconfig.defaults  sdkconfig.secrets  sdkconfig.secrets.example
c6_messenger/main/: CMakeLists.txt  Kconfig.projbuild  coproc_sdio_slave.c  coproc_sdio_slave.h  hosted_alert_server.c  hosted_alert_server.h  main.c
docs/: p4_eye_sdio_nets.txt  sdio_packet_mode_analysis.md  sdio_troubleshooting.md
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  app_main.h  app_video.c  app_video.h  app_video_utils.c  app_video_utils.h  at_client.c  at_client.h  at_http.c  at_http.h  at_mqtt.c  at_mqtt.h  at_ota.c  at_ota.h  at_wifi.c  at_wifi.h  c6_flash_bridge.c  c6_flash_bridge.h  coco_pose.cpp  coproc_sdio.c  coproc_sdio.h  coproc_uart.c  coproc_uart.h  fall_notifier.c  fall_notifier.h  idf_component.yml  net_telegram.c  net_telegram.h  pose_overlay.cpp  pose_overlay.h  telegram_photo.c  telegram_photo.h
p4_sdio_flash/: partitions.csv  sdkconfig.defaults
p4_sdio_flash/main/: CMakeLists.txt  bin2array.cmake  example_common.c  example_common.h  main.c
p4_sdio_flash_at/: CMakeLists.txt  README.md  download_esp_at.sh  sdkconfig.defaults
p4_sdio_flash_at/main/: example_common.c  example_common.h  (+1 more)
